# pyzpacker

./: .gitignore  CHANGELOG.md  README.md  __main__.py  comp.py  pyproject.toml  pyzpacker-py3.10.pyz
.github/workflows/: python-publish.yml  python-test.yml
pyzpacker/: cmd.py  pyzpacker.py
